<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:paddingStart="@dimen/profile_padding"
    android:paddingTop="@dimen/profile_padding"
    android:paddingEnd="@dimen/profile_padding_end"
    android:paddingBottom="@dimen/profile_padding">

    <ImageView
        android:id="@+id/image_view_avatar"
        android:layout_width="@dimen/profile_avatar_width"
        android:layout_height="@dimen/profile_avatar_height"
        android:contentDescription="@string/img_squirrel_description"
        android:src="@drawable/squirrel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin_about"
        android:background="@drawable/rectangle_card_profile"
        android:paddingStart="@dimen/profile_padding"
        android:paddingTop="@dimen/padding_bottom_btn_second_act"
        android:paddingEnd="@dimen/profile_padding"
        android:paddingBottom="@dimen/padding_bottom_btn_second_act"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_avatar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/profile_margin_text_bottom"
            android:text="@string/profile_name"
            android:textSize="@dimen/profile_text_full_name"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@id/text_view_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/profile_margin_text_bottom"
            android:text="@string/profile_surname"
            android:textSize="@dimen/profile_text_full_name"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@id/text_view_patronymic"
            app:layout_constraintEnd_toEndOf="@id/text_view_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/text_view_name"
            app:layout_constraintTop_toBottomOf="@id/text_view_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_patronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_patronymic"
            android:textSize="@dimen/profile_text_full_name"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text_view_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/text_view_name"
            app:layout_constraintTop_toBottomOf="@id/text_view_surname" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_dob_margin_start"
            android:text="@string/profile_dob"
            android:textSize="@dimen/profile_dob_text"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_view_patronymic"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_dob_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_dob_number"
            android:textSize="@dimen/profile_dob_text"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="@+id/text_view_dob"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_view_dob"
            app:layout_constraintTop_toBottomOf="@+id/text_view_dob"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

