<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson3.Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_shape"
        app:layout_constraintBottom_toTopOf="@id/card_view_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        android:id="@+id/card_view_layout"
        layout="@layout/card_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/city_title"
        style="@style/ProfileTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_margin_end"
        android:text="@string/profile_city_title"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/card_view_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/city"
        style="@style/ProfileTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_margin_text"
        android:text="@string/profile_city"
        app:layout_constraintBottom_toTopOf="@id/about_me_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/city_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_me_title"
        style="@style/ProfileTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_margin_about"
        android:text="@string/profile_about_me_title"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_me"
        style="@style/ProfileTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_margin_text"
        android:text="@string/profile_about_me"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_btn"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/about_me_title"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/img_squirrel_margin_bottom"
        android:background="@drawable/rectangle_edit_btn_shape"
        android:paddingStart="@dimen/profile_padding_btn_horiz"
        android:paddingTop="@dimen/profile_padding_btn_vertic"
        android:paddingEnd="@dimen/profile_padding_btn_horiz"
        android:paddingBottom="@dimen/profile_padding_btn_vertic"
        android:text="@string/profile_edit_btn"
        android:textSize="@dimen/profile_text_full_name"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start" />

</androidx.constraintlayout.widget.ConstraintLayout>